--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+	body {
+		font-family: "Inter", sans-serif;
+		@apply bg-slate-200;
+	}
+
+	.navbar-fixed {
+		@apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur-sm;
+		box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+	}
+
+	.hamburger-line {
+		@apply my-2 block h-[2px] w-[30px] bg-black;
+	}
+
+	.hamburger-active > span:nth-child(1) {
+		@apply rotate-45;
+	}
+	.hamburger-active > span:nth-child(2) {
+		@apply scale-0;
+	}
+	.hamburger-active > span:nth-child(3) {
+		@apply -rotate-45;
+	}
 }
